# SolanaTraderNexus

./: .env.clean  .env.deployment  .env.direct  .env.dual  .env.enhanced  .env.example  .env.force-real  .env.hyper-aggressive  .env.jito  .env.nexus-pro  .env.no-instant-nodes  .env.override  .env.premium  .env.premium-rpc  .env.real-trading  .env.syndica  .env.syndica-only  .env.trading  .env.trading.temp  .env.ultimate  .replit  1000-dimension-strategies-real.ts  5-cycle-dimension-strategy.ts  9-gigantic-strategies.ts  ACTUAL_TRADING_RESULTS.md  AGGRESSIVE_PROFIT_PROJECTION.md  AI_SYSTEM_EXPLANATION.txt  AUTONOMOUS_TRADING_DASHBOARD.md  BLOCKCHAIN_VERIFICATION_DASHBOARD.md  BOOSTED_TRADE_SETTINGS.md  Blacc gold supernova v6  CUSTOM_TRADES.md  Cargo.toml  ENHANCED_RETURNS_BIRDEYE.md  HIGH_YIELD_PROFIT_PROJECTION.md  HPN_WALLET_TRADES.md  HX_EXPORT_SUMMARY.txt  HYPERAGGRESSIVE_PROFIT_PROJECTION.md  HYPER_AGGRESSIVE_PROFIT_DASHBOARD.md  MAXIMUM_RETURNS_ONCHAIN.md  (+971 more)
activation/: aimodelsynapse-active.json  extreme-strategies-active.json  maximized-aimodelsynapse-active.json  nuclear-strategies-active.json  quantum-flash-10day-active.json  ultimate-nuclear-active.json
ai_agent/: Cargo.toml  deploy.ts  main.rs
ai_agent/skills/: trading_repair.rs
alerts/: alert_history.json
attached_assets/: Pasted--1-Agent-Hyperion-Flash-Arbitrage-Overlord-Framework-Architecture-Rust-Anchor-ru-1746738031403.txt  Pasted--1-Enhanced-RPC-Management-System-typescript-enhancedRpcManager-ts-class-EnhancedRpcManag-1747474472166.txt  Pasted--Quantum-Flash-Strategy-A-high-powered-flash-loan-and-arbitrage-execution-system-levera-1747476998670.txt  Pasted--Replit-Deployment-Fixer-System-Combines-AI-diagnostics-Solana-specific-optimizations--1747772418215.txt  Pasted--nexus-engine-src-telemetry-rs-use-influxdb-Client-Timestamp-use-tokio-sync-mpsc-pub-stru-1748466353799.txt  Pasted--nexus-live-src-transaction-engine-rs-use-solana-sdk-instruction-Instruction-transact-1748466180008.txt  Pasted--nexus-live-src-transaction-engine-rs-use-solana-sdk-instruction-Instruction-transact-1748466765909.txt  Pasted--nexus-live-src-transaction-engine-rs-use-solana-sdk-instruction-Instruction-transact-1748466847722.txt  Pasted--typescript-price-service-ts-import-Connection-PublicKey-from-solana-web3-js-import--1747475592869.txt  Pasted-Start-with-strictest-config-Temporarily-set-strict-false-in-tsconfig-json-to-reduce-noise--1747473035768.txt  Pasted-pub-struct-FlashLoanArbitrageStrategy-nexus-engine-Arc-Mutex-EnhancedTransactionEngine--1747244822193.txt  Pasted-pub-struct-MomentumSurfingStrategy-memecortex-Arc-Mutex-MemeCortexIntegration-transact-1747244530752.txt  Pasted-rust-use-std-sync-Arc-use-axum-Router-routing-get-Json-use-moka-future-Cache-use-serde--1747528582707.txt  Pasted-use-anchor-lang-prelude-use-anchor-spl-token-self-Mint-TokenAccount-declare-id-YourPr-1747411651971.txt  Pasted-use-anchor-lang-prelude-use-anchor-spl-token-self-Token-TokenAccount-declare-id-YourP-1747414504995.txt  Pasted-use-std-process-Command-use-std-fs-use-std-time-Duration-use-notify-Watcher-RecursiveMode-1747428145838.txt
auth/: dashboard-data.json  master-verification-key.json  real-time-config.json  verification-dashboard.html
backup-1747772582850/: backup-info.json  wallet.json
blockers/: instant-nodes-blocker.js
cache/: threshold-analysis.json
client/: index.html  share.js  vite.config.js  websocket-client.js
config/: accelerated-hpn-config.json  aimodelsynapse-config.json  arbitrage-config.json  borrow-flash-arbitrage-strategy.json  dual-syndica.json  extreme-strategies.json  flash-loan-monitoring.json  flash-loan-strategy.json  hyperion-config.json  hyperion-flash-config.json  maximized-aimodelsynapse-strategies.json  maximized-trading-config.json  meme-token-price-feed.json  money-glitch-routes.json  multi-rpc-config.json  nexus-engine-config.json  no-instant-nodes.json  nuclear-strategies.json  premium-rpc-config.json  premium-syndica.json  quantum-flash-wallet1-config.json  quantum-omega-price-feeds.json  quantum-omega-wallet1-config.json  rate-limiter-config.json  real-trading-config.json  rpc-config.json  rpc-performance.json  syndica-config.json  syndica-only.json  system-config.json  temporal-block-strategy.json  trade-frequency-optimizer.json  trading-config.json  transaction-tracking-config.json  ultimate-nuclear-config.json  ultimate-nuclear-money-strategy.json  ultimate-rpc.json  wallet-config.json  zero-capital-flash-config.json  zero-capital-flash-strategy.json
dashboard/: quantum-flash-strategy.html
data/: active-wallet.json  aggressive-profit-projection.json  api-endpoints.json  balance-history.json  banned-domains.json  blockchain-verified-trades.json  breakthrough-trades.json  cache-config.json  cascade-flash-strategy.json  dynamic-allocation-config.json  dynamic-allocation-monitor.js  (+336 more)
rust_engine/: Cargo.toml  deploy_anchor.sh
rust_engine/src/: hyperion_quantum.rs  lib.rs  main.rs  market.rs  neural.rs  nexus_optimization.rs  parallel.rs  quantum.rs  quantum_engine.rs  quantum_execution.rs  quantum_integration.rs  quantum_orchestrator.rs  solana_rpc.rs  strategy.rs  temporal_sync.rs  timewarp.rs  transaction.rs  transformer.rs  transformer_integration.rs  wallet.rs
rust_engine/src/contracts/: flash_arbitrage.rs  flash_loan.rs
rust_engine/src/neural/: mod.rs  quantized.rs
rust_engine/src/quantum/: attention.rs  darkpool.rs  entanglement.rs  fourier.rs  hhl.rs  mod.rs  phase_estimation.rs  qaoa.rs  qnn.rs  qsgd.rs  qsvm.rs  tee.rs  vqe.rs
rust_engine/src/security/: mod.rs  vectorized.rs
rust_engine/src/strategy/: flash_loan_arbitrage.rs  mod.rs  momentum_surfing.rs  statistical_arbitrage.rs
rust_engine/src/strategy/lib/: mod.rs  utils.rs
rust_engine/src/transformers/: mod.rs  parallel.rs
rust_engine/src/zk_proofs/: mod.rs  prover.rs  types.rs  verifier.rs
rust_engine/transformers/: crosschain  memecortexremix  microqhc  security
(+1792 files in other folders)
