[package]
name = "solana_quantum_trading"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Trading Team"]
description = "A quantum-inspired Solana trading system with custom transformers and AI trading agents"

[dependencies]
# Solana related - use older version for compatibility
solana-sdk = "1.14.17"
solana-client = "1.14.17"
solana-transaction-status = "1.14.17"
solana-program = "1.14.17"
# Additional decoders for Solana
bs58 = "0.4.0"

# Web framework and server
actix-web = "4.3.1"
actix-rt = "2.9.0"
actix-web-actors = "4.2.0"
actix-files = "0.6.2"

# WebSocket support
actix-ws = "0.2.5"

# Serialization/Deserialization
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

# Database interaction - use an older version to avoid conflicts
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# Error handling
anyhow = "1.0.72"
thiserror = "1.0.44"

# Async runtime
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.73"

# Logging
log = "0.4.19"
env_logger = "0.10.0"

# Configuration
dotenv = "0.15.0"
config = "0.13.3"

# Time handling
chrono = { version = "0.4.26", features = ["serde"] }

# Cryptography
rand = "0.8.5"
ring = "0.16.20"

# Web specific
mime = "0.3.17"
mime_guess = "2.0.4"

# For reactive frontend with Rust (WebAssembly)
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "HtmlInputElement", "HtmlSelectElement", "Window", "Document",
    "Element", "HtmlElement", "Node", "EventTarget", "MouseEvent",
    "DomRect", "CssStyleDeclaration", "Performance"
] }
gloo = "0.8.1"

# HTTP client for WASM
reqwasm = "0.5.0"

# UUID
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Rate limiting
governor = "0.5.1"
nonzero_ext = "0.3.0"

# Solana DEX interactions
# Use specific SPL crates instead of the meta-package
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
spl-memo = "3.0.1"

# For static variables
lazy_static = "1.4.0"

# Wormhole SDK for cross-chain interactions
wormhole-sdk = "0.1.0"
wormhole-core = "0.1.0"
portal-bridge = "0.1.0"

# For HTTP requests
reqwest = { version = "0.11.20", features = ["json"] }

# For cross-chain functionality
ethers = { version = "2.0.4", features = ["legacy"] }
ethers-providers = "2.0.4"
ethers-core = "2.0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "standalone"
path = "src/standalone_main.rs"

[[bin]]
name = "solana_quantum_trading"
path = "src/main.rs"

[[bin]]
name = "activate_singularity"
path = "src/bin/activate_singularity.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
