[package]
name = "quantum_repair_agent"
version = "0.1.0"
edition = "2021"
description = "AI-powered repair agent for Solana trading systems"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
notify = "4.0"
regex = "1.8"
dotenv = "0.15"

[lib]
name = "quantum_repair"
path = "src/lib.rs"

[[bin]]
name = "repair_agent"
path = "main.rs"